# trendio_Ecommerce_fashion_store

./: .gitignore  .pre-commit-config.yaml
backend/: .env.example  .gitignore  .pre-commit-config.yaml  docker-compose.yml  manage.py  pyproject.toml
backend/apps/cart/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/cart/migrations/: 0001_initial.py
backend/apps/orders/: models.py  serializers.py  services.py  urls.py  utils.py  views.py
backend/apps/orders/migrations/: 0001_initial.py
backend/apps/payments/: urls.py
backend/apps/products/: admin.py  bulk_upload_view_v2.py  filters.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/products/bulk_upload/: error_reporter.py  image_downloader.py  parser.py
backend/apps/products/migrations/: 0001_initial.py  0002_bulkupload.py
backend/apps/reviews/: urls.py
backend/apps/users/: admin.py  exceptions.py  managers.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py  0002_useraddress.py
backend/config/: __init__.py  celery.py  urls.py
backend/config/settings/: __init__.py  base.py  dev.py  prod.py
backend/docker/: Dockerfile  entrypoint.sh
backend/requirements/: base.txt  dev.txt  prod.txt
backend/tests/: conftest.py
backend/tests/test_users/: test_auth.py
frontend/: .env.example  .eslintrc.cjs  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: index.css  main.jsx
frontend/src/api/: auth.api.js  axiosClient.js  cart.api.js  index.js  orders.api.js  payments.api.js  products.api.js  users_api.js
frontend/src/constants/: index.js
frontend/src/hooks/: index.js  useAuth.js  useCart.js  useOrders.js  useOtpTimer.js  useProducts.js  (+1 more)
testing/: auth_collection.json  envirnment.json  products_collection.json  products_envirnment.json
(+50 files in other folders)
